--- a/rulebooks/zabbix-test.yml
+++ b/rulebooks/zabbix-test.yml
@@ -1,18 +1,12 @@
 ---
-- name: Listen for events on a webhook
-  hosts: all 
-
+- name: Zabbix test rulebook
+  hosts: all
   sources:
-    - name: Match events posted to port 5000
-      ansible.eda.webhook:
+    - ansible.eda.webhook:
         host: 0.0.0.0
-        port: 5000
-
+        port: 5001
   rules:
-    - name: Print output of event.payload
+    - name: debug
       condition: event.payload is defined
       action:
-        run_module:
-          name: ansible.builtin.debug
-          module_args:
-            msg: "{{ event.payload }}"
+        debug:
