--- a/rulebooks/aide-monitoring.yml
+++ b/rulebooks/aide-monitoring.yml
@@ -1,22 +1,19 @@
 ---
-- name: Zabbix test rulebook
+- name: Listening webhook port 5001 
   hosts: all
   sources:
     - ansible.eda.webhook:
         host: 0.0.0.0
         port: 5001
   rules:
-    - name: Run ls
+    - name: Move files to target directory
       condition: event.payload is defined
       action:
-        #debug: 
-        #  msg: "{{ event.payload.path_file }} {{ event.payload.server }}"
-        #run_playbook:
-        #  name: playbooks/print-hostname.yml
         run_job_template:
-          name: EDA Test
+          name: "[EDA] Move files to target directory"
           organization: Default
           job_args:
             limit: "{{ event.payload.server }}"
             extra_vars:
-              path_file: "{{ event.payload.path_file }}"
+              path_file: 
+                - "{{ event.payload.path_file }}"
