--- a/playbooks/move-files.yml
+++ b/playbooks/move-files.yml
@@ -4,20 +4,13 @@
   tasks:
     - name: Copy files to /tmp/files-moved
       ansible.builtin.copy:
-        src: /tmp/new-files/
+        src: "{{ path_file }}"
         remote_src: true
-        dest: /tmp/files-moved
+        dest: /tmp/files-moved/
         mode: "0644"
         unsafe_writes: no
 
-    - name: Localizar arquivos no diretório de origem
-      ansible.builtin.find:
-        paths: /tmp/new-files/
-        file_type: file
-      register: files_found
-
     - name: Remove files from source directory
       ansible.builtin.file:
-        path: "{{ item.path }}"
+        path: "{{ path_file }}"
         state: absent
-      loop: "{{ files_found.files }}"
